# termpad

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
data/: adjectives.txt  nouns.txt
pastes/: cloudyWire  colorfulLighter  gleamingWindow  innocentVase  superSchool
src/: config.rs  error.rs  handlers.rs  main.rs  options.rs  templates.rs  utils.rs  web.rs
static/: 404.html  app.css
templates/: index.html  input.html  paste.html
