[package]
name = "termpad"
version = "0.1.0"
authors = ["Spyros Roum <spyrosr1@gmail.com>"]
edition = "2018"
description = "Command line pastebin for sharing terminal output. "
readme = "README.md"
repository = "https://github.com/SpyrosRoum/termpad"
license-file = "LICENSE"
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
anyhow = "1"
rand = "0.8"
simplelog = "0.9"
log = "0.4"
dirs-next = "2"

warp = "0.3"
tokio = { version = "1", features = ["full"] }
askama = "0.8"
