[package]
name = "termpad"
version = "1.2.0"
authors = ["Spyros Roum <spyrosr1@gmail.com>"]
edition = "2018"
description = "Command line pastebin for sharing terminal output. "
readme = "README.md"
repository = "https://github.com/SpyrosRoum/termpad"
license-file = "LICENSE"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
rand = "0.8"
simplelog = "0.9"
log = "0.4"
dirs-next = "2"
thiserror = "1"

once_cell = "1.9"

axum = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io-util"] }
askama = "0.8"

serde = { version = "1", features = ["derive"] }
async-compression = { version = "0.3", features = ["tokio", "zstd"] }
zstd = "0.9"
